--- a/package.json
+++ b/package.json
@@ -12,20 +12,24 @@
   },
   "scripts": {
     "postinstall": "yarn audit",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "format": "prettier --single-quote true --trailing-comma es5 --write \"src/*.js\""
   },
   "eslintConfig": {
     "env": {
-      "node": true
+      "node": true,
+      "es6": true
     },
     "parserOptions": {
-      "ecmaVersion": 6
+      "ecmaVersion": 8
     },
     "extends": [
       "eslint:recommended",
       "google"
     ],
     "rules": {
+      "indent": ["error", 2],
+      "arrow-parens": [2, "as-needed"],
       "require-jsdoc": "off",
       "new-cap": "off",
       "guard-for-in": "off",
@@ -43,7 +47,8 @@
   },
   "devDependencies": {
     "eslint": "^5.10.0",
-    "eslint-config-google": "^0.11.0"
+    "eslint-config-google": "^0.11.0",
+    "prettier": "^1.15.3"
   },
   "dependencies": {
     "dnssd": "^0.4.1",
