--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "alorg-service",
+  "name": "@theoperatore/alorg-service",
   "version": "1.0.0",
   "description": "http/2 + mDNS for zeroconf microservices running within the same local network",
   "main": "src/index.js",
   "repository": "git@github.com:theoperatore/alorg-service.git",
   "author": "Alex Petersen <theoperatore@gmail.com>",
   "license": "MIT",
-  "private": true,
   "engines": {
     "node": ">=10.14.1"
   },
